<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainActivityId"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    app:menu="@menu/navigation_drawer"



    >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBarMain"

        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        app:menu="@menu/navigation_drawer"
        app:navigationIcon="@drawable/ic_baseline_menu_24"

        >

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"

            android:text="@string/title"
            android:textAlignment="center" />
    </com.google.android.material.appbar.MaterialToolbar>


    <TextView
        android:id="@+id/levelTitle"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"

        android:layout_marginLeft="100dp"
        android:gravity="center"
        android:hint="ようこそ user!"
        android:textAlignment="center"

        android:textColor="@color/colorWhite"
        android:textSize="25dp"
        android:textStyle="bold"


        />

    <TextView
        android:id="@+id/kanjiActivityTextViewMain"
        style="@style/ItemsStyleBorder"
        android:layout_width="220dp"
        android:layout_height="wrap_content"


        android:layout_marginTop="150dp"

        android:layout_alignStart="@id/levelTitle"
        android:gravity="center"
        android:text="Study \nKanjis"

        />

    <TextView
        android:id="@+id/hiraganaActivityTextViewMain"
        style="@style/ItemsStyleBorder"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:layout_alignStart="@+id/kanjiActivityTextViewMain"
        android:gravity="center"
        android:text="@string/study_hiragana"
        android:textSize="30dp" />

    <!--Bottom Navigation View-->
    <TextView
        android:id="@+id/katakanaActivityTextViewMain"

        style="@style/ItemsStyleBorder"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="370dp"
        android:layout_alignStart="@+id/hiraganaActivityTextViewMain"
        android:gravity="center"
        android:text="@string/study_katakana"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/quizActivityTextViewMain"

        style="@style/ItemsStyleBorder"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:layout_alignStart="@+id/katakanaActivityTextViewMain"
        android:gravity="center"
        android:text="@string/quiz_title"
        android:textStyle="bold"

        />



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_main"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        app:menu="@menu/bottom_navigation_menu" />







</RelativeLayout>