<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/kanaActivityId"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"

    app:menu="@menu/navigation_drawer">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBarKana"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/kana_menu"
        app:navigationIcon="@drawable/ic_baseline_menu_24">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"

            android:text="@string/title"
            android:textAlignment="center" />
    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/kanaTitleDescriptionTypeId"
        style="@style/ItemsStyle"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:hint="@string/hiragana_dictionary"

        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerKana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="80dp"
        android:layout_marginTop="120dp"

        android:layout_marginEnd="5dp"


        android:layout_marginBottom="50dp"
        android:visibility="visible"


        tools:listitem="@layout/kana_item_list" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_kana"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        app:menu="@menu/bottom_navigation_menu" />


</RelativeLayout>
