<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/kanjiMenuActivityId"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"

    app:menu="@menu/navigation_drawer">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBarKanjiMenu"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        app:menu="@menu/navigation_drawer"
        app:navigationIcon="@drawable/ic_baseline_menu_24"

        >

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="Kanji Study"
            android:textAlignment="center" />
    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.textview.MaterialTextView

        android:id="@+id/titleSectionSelectOptionsTextView"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="60dp"
        android:text="Choose Level" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/kanjiLevelOneSelectOptionsTextView"
        style="@style/ItemsStyle"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/layout_border"

        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="LEVEL 1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/kanjiLevelTwoSelectOptionsTextView"
        style="@style/ItemsStyle"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/kanjiLevelOneSelectOptionsTextView"
        android:layout_marginTop="190dp"
        android:background="@drawable/layout_border"
        android:gravity="center_horizontal"

        android:paddingTop="10dp"
        android:text="LEVEL 2"

        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/kanjiLevelThreeSelectOptionsTextView"
        style="@style/ItemsStyle"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/kanjiLevelOneSelectOptionsTextView"
        android:layout_marginTop="260dp"
        android:background="@drawable/layout_border"

        android:gravity="center"
        android:text="LEVEL 3" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/kanjiLevelFourSelectOptionsTextView"
        style="@style/ItemsStyle"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/kanjiLevelOneSelectOptionsTextView"
        android:layout_marginTop="330dp"
        android:background="@drawable/layout_border"
        android:gravity="center"
        android:text="LEVEL 4" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/kanjiLevelFiveSelectOptionsTextView"
        style="@style/ItemsStyle"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/kanjiLevelOneSelectOptionsTextView"
        android:layout_marginTop="400dp"
        android:background="@drawable/layout_border"
        android:gravity="center"
        android:text="LEVEL 5" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/kanjiLevelSixSelectOptionsTextView"
        style="@style/ItemsStyle"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/kanjiLevelOneSelectOptionsTextView"

        android:layout_marginTop="470dp"
        android:background="@drawable/layout_border"
        android:gravity="center"
        android:text="LEVEL 6" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/kanjiLevelSevenSelectOptionsTextView"
        style="@style/ItemsStyle"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/kanjiLevelOneSelectOptionsTextView"

        android:layout_marginTop="540dp"
        android:background="@drawable/layout_border"
        android:gravity="center"
        android:text="LEVEL 7"
        android:layout_marginBottom="40dp"

        />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_kanji_menu"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        app:menu="@menu/bottom_navigation_menu" />



</RelativeLayout>
