<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/kanjiActivityId"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    app:menu="@menu/navigation_drawer"

    tools:context=".views.loginProcess.MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBarKanji"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/kana_menu"
        app:navigationIcon="@drawable/ic_baseline_menu_24">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:text="@string/title"
            android:textAlignment="center" />
    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:id="@+id/levelTitle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:hint="Level 1"
        android:textColor="@color/colorWhite"
        android:textSize="25dp"
        android:textStyle="bold" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewKanji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginLeft="83dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="60dp"


        android:visibility="visible"
        tools:listitem="@layout/kanji_list" />


    <Button
        android:id="@+id/previous_level_button"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginTop="340dp"


        android:background="@drawable/whiteleftarrow" />

    <Button
        android:id="@+id/next_level_button"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="330dp"
        android:layout_marginTop="340dp"

        android:background="@drawable/whiterightarrow"


        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_kanji"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        app:menu="@menu/bottom_navigation_menu" />


</RelativeLayout>

