...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kanji_meaning_id"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlCompat" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/kanji_button_sound_id"


        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/speaker"

...
